test/zinc_source/compile_errors/tuples/04_dict_index_mutation_during_iteration.zn
// expected-error: cannot mutate dict during iteration

fn main() {
    d = sort_dict()
    d["a"] = 1
    for key, value in d {
        d["b"] = 2
    }
}
